clean up yamnet detector

--- a/notebooks/single_stage_yamnet_frame.ipynb
+++ b/notebooks/single_stage_yamnet_frame.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "51e2edbe",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 100, batch_size = 16, model_save_dir = \"../src/models/yamnet_framewise.keras\", classes = CLASSES)"
+    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 100, batch_size = 16, model_save_dir = \"checkpoints/yamnet_framewise.keras\", classes = CLASSES)"
    ]
   },
   {
