changed yamnet detector model inference and output

--- a/notebooks/event_detection_yamnet.ipynb
+++ b/notebooks/event_detection_yamnet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6516c5ce",
    "metadata": {},
    "outputs": [
@@ -18,13 +18,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-03 01:40:46.749611: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-12-03 01:40:46.775890: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-12-03 01:40:47.567327: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-12-04 01:08:04.468080: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-12-04 01:08:04.486458: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-04 01:08:05.167535: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-12-03 01:41:03.846205: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-12-03 01:41:03.858286: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-12-03 01:41:22.996604: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2025-12-04 01:08:20.325328: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-04 01:08:20.334848: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-12-04 01:08:37.246898: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     },
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4c7334cc",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "2001"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,87 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b30c7a0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pre-computing features for 2500 files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2500/2500 [00:03<00:00, 755.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: train loss = 0.1359\n",
-      "Epoch 1: valildation loss = 0.1142\n",
-      "Epoch 2: train loss = 0.0889\n",
-      "Epoch 2: valildation loss = 0.0985\n",
-      "Epoch 3: train loss = 0.0727\n",
-      "Epoch 3: valildation loss = 0.0864\n",
-      "Epoch 4: train loss = 0.0624\n",
-      "Epoch 4: valildation loss = 0.0913\n",
-      "Epoch 5: train loss = 0.0532\n",
-      "Epoch 5: valildation loss = 0.1010\n",
-      "Epoch 6: train loss = 0.0458\n",
-      "Epoch 6: valildation loss = 0.1009\n",
-      "Epoch 7: train loss = 0.0383\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-12-03 02:05:52.719\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.models.yamnet_train\u001b[0m:\u001b[36mtrain\u001b[0m:\u001b[36m218\u001b[0m - \u001b[1mSaved model to checkpoints/yamnet_detector.pth\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: valildation loss = 0.1110\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "solver = Solver(epochs = 5, train_idx=train_idx, path_prefix = path_prefix, device = device)\n",
-    "solver.train()"
+    "# uncomment to retrain\n",
+    "\"\"\"solver = Solver(epochs = 5, train_idx=train_idx, path_prefix = path_prefix, device = device)\n",
+    "solver.train()\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ee2269ab",
+   "execution_count": null,
+   "id": "c4e34337",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pre-computing features for 499 files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 499/499 [00:00<00:00, 674.85it/s]\n",
-      "Testing on data/processed/detection/train...: 100%|██████████| 499/499 [01:33<00:00,  5.33it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "events = solver.evaluate_full([i for i in range(len(data['event_label'])) if i not in train_idx])"
+    "test_path = Path(\"data\") / \"processed\" / \"yamnet\" / \"spectrograms_test.pkl\"\n",
+    "test_data = pickle.load(open(test_path, \"rb\"))\n",
+    "filepaths = [os.path.join(DETECTION_TEST_PATH, file) for file in test_data['files']]\n",
+    "events = run_yamnet(filepaths)"
    ]
   }
  ],
