integrate yamnet into main

--- a/notebooks/evaluation_test.ipynb
+++ b/notebooks/evaluation_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1d6d901d",
    "metadata": {},
    "outputs": [],
@@ -18,54 +18,18 @@
     "import pickle\n",
     "import sys\n",
     "import os\n",
+    "import json\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "from src.utils.audio_to_spectrograms import create_spectrogram_pkl\n",
-    "#from src.main import calculate_metrics\n",
+    "from src.main import calculate_metrics\n",
     "\n",
-    "# Copied from src.main as I'm having problems with audio mamba imports\n",
-    "from src.config import CLASSES\n",
-    "from loguru import logger\n",
-    "import sed_eval\n",
-    "\n",
-    "def calculate_metrics(yamnet_dict, gt_event_dict, time_resolution=1.0, t_collar=0.25):\n",
-    "    logger.warning(\"Metrics not implemented!\")\n",
-    "    # Based on event dictionary\n",
-    "\n",
-    "    # Accuracy\n",
-    "\n",
-    "    # IoU\n",
-    "\n",
-    "    # DCASE SED eval: https://tut-arg.github.io/sed_eval/tutorial.html#id1\n",
-    "    event_based_metrics = sed_eval.sound_event.EventBasedMetrics(CLASSES, t_collar=t_collar)\n",
-    "    segment_based_metrics = sed_eval.sound_event.SegmentBasedMetrics(CLASSES, time_resolution=time_resolution)\n",
-    "    for file, estimated_event in yamnet_dict.items():\n",
-    "        ref_event = gt_event_dict[file]\n",
-    "        event_based_metrics.evaluate(\n",
-    "            reference_event_list=ref_event,\n",
-    "            estimated_event_list=estimated_event\n",
-    "        )\n",
-    "        segment_based_metrics.evaluate(\n",
-    "            reference_event_list=ref_event,\n",
-    "            estimated_event_list=estimated_event\n",
-    "        )\n",
-    "    print(event_based_metrics)\n",
-    "    print(segment_based_metrics)"
+    "from src.config import CLASSES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "101e3fd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3e30e6d7",
    "metadata": {},
    "outputs": [],
@@ -76,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "db5af036",
    "metadata": {},
    "outputs": [
@@ -93,7 +57,7 @@
        "  'event_label': 'car_horn'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "55e262b1",
    "metadata": {},
    "outputs": [],
@@ -117,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "356bc63b",
    "metadata": {},
    "outputs": [],
@@ -132,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "2bfc3962",
    "metadata": {},
    "outputs": [],
@@ -143,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "03d8dd44",
    "metadata": {},
    "outputs": [
@@ -156,7 +120,7 @@
        "  'event_label': 'siren'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7d7386bb",
    "metadata": {},
    "outputs": [
@@ -177,7 +141,7 @@
        "'with open(\\'outputs/crnn_results.json\\', \"r\") as f:\\n    crnn_dict = json.load(f)\\ncrnn_dict = {k.replace(\\'test_scene\\',\\'test_snipped_scene\\'):v for k, v in crnn_dict.items()}'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,47 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a8c92b29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crnn_classes = [[i['event_label'] for i in v] for k, v in crnn_dict.items()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "065c8157",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confusion_matrix(gt_classes, crnn_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "a530610a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gt_classes = [[i['event_label'] for i in v][0] for k, v in gt_event_dict.items()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "2638dfa0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-12-05 22:31:17.566\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mcalculate_metrics\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mMetrics not implemented!\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -341,17 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "4178ab45",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-12-05 22:31:29.359\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mcalculate_metrics\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mMetrics not implemented!\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -462,17 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "c5a4b273",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-12-05 22:31:36.382\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mcalculate_metrics\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mMetrics not implemented!\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -583,8 +496,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "540e9643",
+   "execution_count": 14,
+   "id": "1da36d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cc3c4d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crnn_classes = [[i['event_label'] for i in v] for k, v in crnn_dict.items()]\n",
+    "gt_classes = [[i['event_label'] for i in v][0] for k, v in gt_event_dict.items()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2a6bbbc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,17 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "1da36d1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "f6689d1c",
    "metadata": {},
    "outputs": [
@@ -647,7 +571,7 @@
          "type": "float"
         }
        ],
-       "ref": "e63cde0e-e72d-41d0-b179-13c50a2da1c0",
+       "ref": "76958a14-2994-428c-aed3-ab9d71e9a332",
        "rows": [
         [
          "cough",
@@ -775,7 +699,7 @@
        "car_horn   81.0     114.0      74.0   77.0      53.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
