add median filter and batching

--- a/notebooks/event_detection_yamnet.ipynb
+++ b/notebooks/event_detection_yamnet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93c8ee54",
    "metadata": {},
    "outputs": [],
@@ -28,14 +28,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1765020371.235983     109 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 15513 MB memory:  -> device: 0, name: Tesla P100-PCIE-16GB, pci bus id: 0000:00:04.0, compute capability: 6.0\n"
+      "2025-12-08 01:23:43.418247: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-12-08 01:23:43.418680: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-08 01:23:43.464275: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-12-08 01:23:59.717203: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-12-08 01:23:59.726236: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-12-08 01:24:16.757971: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using: cuda\n"
+      "Using: cpu\n"
      ]
     }
    ],
@@ -62,52 +68,53 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c7771950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from loguru import logger\n",
+    "import sed_eval\n",
+    "\n",
+    "gt_pkl_path = 'data/processed/yamnet/spectrograms_train_list.pkl'\n",
+    "\n",
+    "gt_events = pickle.load(open(gt_pkl_path, 'rb'))\n",
+    "gt_event_dict = {ref_event['file']: [{'file':ref_event['file'], \n",
+    "                    'event_onset':ref_event['onset'], \n",
+    "                    'event_offset':ref_event['offset'],\n",
+    "                    'event_label':1}]\n",
+    "                    for ref_event in gt_events}\n",
+    "\n",
+    "detection_classes = [1]\n",
+    "\n",
+    "def calculate_metrics(pred_event_dict, gt_event_dict, time_resolution=1.0, t_collar=0.25):\n",
+    "\n",
+    "    segment_based_metrics = sed_eval.sound_event.SegmentBasedMetrics(detection_classes, time_resolution=time_resolution)\n",
+    "    for file, estimated_event in pred_event_dict.items():\n",
+    "        ref_event = gt_event_dict[file]\n",
+    "        segment_based_metrics.evaluate(\n",
+    "            reference_event_list=ref_event,\n",
+    "            estimated_event_list=estimated_event\n",
+    "        )\n",
+    "    #print(segment_based_metrics)\n",
+    "\n",
+    "    return segment_based_metrics.results_overall_metrics()['f_measure']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4c7334cc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pre-computing features for 2500 files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/2500 [00:00<?, ?it/s]I0000 00:00:1765020396.813941     148 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
-      "100%|██████████| 2500/2500 [01:10<00:00, 35.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: train loss = 0.1394\n",
-      "Epoch 1: valildation loss = 0.1175\n",
-      "Epoch 2: train loss = 0.0896\n",
-      "Epoch 2: valildation loss = 0.0929\n",
-      "Epoch 3: train loss = 0.0742\n",
-      "Epoch 3: valildation loss = 0.0859\n",
-      "Epoch 4: train loss = 0.0621\n",
-      "Epoch 4: valildation loss = 0.0947\n",
-      "Epoch 5: train loss = 0.0531\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-12-06 11:28:10.342\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.models.yamnet_train\u001b[0m:\u001b[36mtrain\u001b[0m:\u001b[36m204\u001b[0m - \u001b[1mSaved model to checkpoints/yamnet_detector.pth\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5: valildation loss = 0.0983\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nsolver = Solver(epochs = 5, train_idx=train_idx, path_prefix = path_prefix, device = device, batch_size = 8)\\nsolver.train()'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,10 +128,95 @@
     "    choices = np.where(data['event_label'] == label)[0]\n",
     "    train_idx.append(np.sort(np.random.choice(choices, size = int(np.round(len(choices)*train_size)), replace = False)))\n",
     "train_idx = np.sort(np.concatenate(train_idx))\n",
-    "len(train_idx)\n",
     "\n",
-    "solver = Solver(epochs = 5, train_idx=train_idx, path_prefix = path_prefix, device = device)\n",
-    "solver.train()"
+    "\"\"\"\n",
+    "solver = Solver(epochs = 5, train_idx=train_idx, path_prefix = path_prefix, device = device, batch_size = 8)\n",
+    "solver.train()\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "340d6048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = list(range(len(data[\"event_label\"])))\n",
+    "all_files = [f\"{DETECTION_TRAIN_PATH}/train_snipped_scene_{str(i).zfill(4)}.wav\" for i in all_indices]\n",
+    "val_idx = [i for i in range(len(data[\"event_label\"])) if i not in train_idx]\n",
+    "val_files = [all_files[i] for i in val_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "696f3ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-12-08 01:25:52.778\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.models.yamnet_train\u001b[0m:\u001b[36mload_model\u001b[0m:\u001b[36m203\u001b[0m - \u001b[1mLoaded model weights from checkpoints/yamnet_detector.pth\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "Pre-computing features for 499 files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 499/499 [00:01<00:00, 398.00it/s]\n",
+      "Testing...: 100%|██████████| 499/499 [00:05<00:00, 88.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'f_measure': 0.8951048951048951, 'precision': 0.9333333333333333, 'recall': 0.8598848368522073}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for threshold in np.linspace(0.3, 0.8, 11):\n",
+    "solver = Solver(train_idx=[], mode=\"infer\", checkpoint_path = YAMNET_DETECTOR_CHECKPOINT)\n",
+    "solver.load_model(YAMNET_DETECTOR_CHECKPOINT)\n",
+    "\n",
+    "threshold = 0.5\n",
+    "print(threshold)\n",
+    "events_list = solver.inference(val_files, threshold=threshold, med_filter = False)\n",
+    "pred_event_dict = {}\n",
+    "for key, value in events_list.items():\n",
+    "    for value_i in range(len(value)):\n",
+    "        value[value_i] = value[value_i] | {\n",
+    "            \"event_label\": 1\n",
+    "        }\n",
+    "    pred_event_dict[key] = value\n",
+    "\n",
+    "results = calculate_metrics(pred_event_dict, gt_event_dict, t_collar=0.5)\n",
+    "print(results) # 0.8903"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f30f63b8",
+   "metadata": {},
+   "source": [
+    "# Test"
    ]
   },
   {
@@ -189,12 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "3ce7e9ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check if pkl file is created\n",
     "gt_pkl_path = 'data/processed/yamnet/spectrograms_test_list.pkl'\n",
     "\n",
     "gt_events = pickle.load(open(gt_pkl_path, 'rb'))\n",
@@ -335,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dl_env",
    "language": "python",
    "name": "python3"
   },
@@ -349,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
